welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: value && is not a member of Unit
		if ({nums(i)=6} && {nums(i+1)=6 || nums(i+1)=7}){
                                ^